synchronize CXF trunk with CXF QA branch